force-app/main/default/objects/Hotel__c/Hotel__c.object-meta.xml
<CustomObject>
    <label>Hotel</label>
    <nameField>
        <label>Hotel ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hotels</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>