force-app/main/default/objects/Hotel__c/fields/Additional_Policies__c.field-meta.xml
<CustomField>
    <fullName>Additional_Policies__c</fullName>
    <label>Additional Policies</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>