force-app/main/default/objects/Hotel__c/fields/Extended_Hotel_Description__c.field-meta.xml
<CustomField>
    <fullName>Extended_Hotel_Description__c</fullName>
    <label>Extended Hotel Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>