force-app/main/default/objects/Hotel__c/fields/Hotel_Address__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Address__c</fullName>
    <label>Hotel Address</label>
    <type>Address</type>
</CustomField>