force-app/main/default/objects/Hotel__c/fields/Hotel_Description__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Description__c</fullName>
    <label>Hotel Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>