force-app/main/default/objects/Hotel__c/fields/Hotel_ID__c.field-meta.xml
<CustomField>
    <fullName>Hotel_ID__c</fullName>
    <label>Hotel ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>