force-app/main/default/objects/Hotel__c/fields/Hotel_ID_Name__c.field-meta.xml
<CustomField>
    <fullName>Hotel_ID_Name__c</fullName>
    <formula>Hotel_ID__c +&apos; &apos;+Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hotel ID + Name</label>
    <type>Text</type>
</CustomField>