force-app/main/default/objects/Hotel__c/fields/Hotel_Name__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Name__c</fullName>
    <label>Hotel Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Hotel_Names</valueSetName>
    </valueSet>
</CustomField>