force-app/main/default/objects/Hotel__c/fields/Meeting_Website__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Website__c</fullName>
    <label>Meeting Website</label>
    <type>Url</type>
</CustomField>