force-app/main/default/objects/Hotel__c/fields/Meetings_Description__c.field-meta.xml
<CustomField>
    <fullName>Meetings_Description__c</fullName>
    <label>Meetings Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>