force-app/main/default/objects/Hotel__c/fields/Meetings_Events_Email__c.field-meta.xml
<CustomField>
    <fullName>Meetings_Events_Email__c</fullName>
    <label>Meetings &amp; Events Email</label>
    <type>Email</type>
</CustomField>