force-app/main/default/objects/Hotel__c/fields/Opening_Signing_Year__c.field-meta.xml
<CustomField>
    <fullName>Opening_Signing_Year__c</fullName>
    <label>Opening/Signing Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>