force-app/main/default/objects/Hotel__c/fields/Reservations_Email__c.field-meta.xml
<CustomField>
    <fullName>Reservations_Email__c</fullName>
    <label>Reservations Email</label>
    <type>Email</type>
</CustomField>