force-app/main/default/objects/Hotel__c/fields/synxisId__c.field-meta.xml
<CustomField>
    <fullName>synxisId__c</fullName>
    <label>synxisId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>