force-app/main/default/objects/Hotel__c/recordTypes/DH_Hotel.recordType-meta.xml
<RecordType>
    <fullName>DH_Hotel</fullName>
    <active>true</active>
    <label>Hotel</label>
</RecordType>