force-app/main/default/objects/Hotel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Hotel_ID__c</columns>
    <columns>NAME</columns>
    <columns>Brand__c</columns>
    <columns>City__c</columns>
    <columns>Country__c</columns>
    <columns>Region__c</columns>
    <columns>Rooms__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>